--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react-webcam": "^7.2.0",
     "serve": "^14.2.1"
   },
-  "scripts": {
-    "start": "serve -s inventory/build",
-    "build": "cd inventory && npm run build",
-    "test": "cd inventory && npm test",
-    "eject": "cd inventory && npm run eject"
-  }
+"scripts": {
+  "start": "npm run build && serve -s inventory/build",
+  "build": "cd inventory && npm run build",
+  "test": "cd inventory && npm test",
+  "eject": "cd inventory && npm run eject"
+}
+
 }
