--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "react-icons": "^5.0.1",
+    "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
     "serve": "^14.2.1"
   },
