--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-
-
-
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
@@ -16,8 +13,8 @@ opencv-python-headless==4.5.5.62
 Pillow==8.4.0
 pytesseract==0.3.8
 Flask-Cors==3.0.10
-Keras==2.6.0
-tensorflow-cpu==2.16.1
+# Keras==2.6.0
+# tensorflow-cpu==2.16.1
 
 
 
