--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.7.0
 click==8.1.7
-Flask==3.0.2
-gunicorn==21.2.0
+Flask
+gunicorn
 importlib_metadata==7.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -15,6 +15,3 @@ pytesseract==0.3.8
 Flask-Cors==3.0.10
 # Keras==2.6.0
 # tensorflow-cpu==2.16.1
-
-
-
