--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,10 @@
-blinker==1.7.0
-click==8.1.7
-Flask
-gunicorn
-importlib_metadata==7.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-packaging==24.0
-Werkzeug==3.0.2
-zipp==3.18.1
+Flask==2.0.1
+Werkzeug==2.0.1
+Flask-Cors==3.0.10
 opencv-python-headless==4.5.5.62
 Pillow==8.4.0
 pytesseract==0.3.8
-Flask-Cors==3.0.10
+gunicorn==20.1.0
+
 # Keras==2.6.0
 # tensorflow-cpu==2.16.1
