--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
-    "react-dom": "^18.2.0",
+   "react-dom": "^16.8.0",
     "react-icons": "^5.0.1",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
@@ -15,7 +15,7 @@
   },
 "scripts": {
   "start": "npm run build && serve -s inventory/build",
-  "build": "cd inventory && npm install --legacy-peer-deps && npm run build",
+  "build": "cd inventory && npm run build",
   "test": "cd inventory && npm test",
   "eject": "cd inventory && npm run eject"
 },
